--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "formik": "^1.5.8",
     "react": "^16.9.0",
     "react-dom": "^16.9.0"
   },
