--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@nivo/bar": "^0.59.2",
     "express": "^4.17.1",
     "formik": "^1.5.8",
+    "nivo": "^0.31.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-vis": "^1.11.7"
