--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@nivo/pie": "^0.59.1",
     "express": "^4.17.1",
     "formik": "^1.5.8",
+    "isbn-validate": "^1.0.3",
     "nivo": "^0.31.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-vis": "^1.11.7"
+    "react-vis": "^1.11.7",
+    "yup": "^0.27.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
