--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "buildDev": "rm -rf dist && webpack --mode development --config webpack.server.config.js && webpack --mode development --config webpack.dev.config.js",
     "buildProd": "rm -rf dist && webpack --mode production --config webpack.server.config.js && webpack --mode production --config webpack.prod.config.js",
-    "start": "node ./dist/server.js"
+    "start": "node ./dist/server.js",
+    "watch": "watch 'npm run buildDev' ./src"
   },
   "keywords": [],
   "author": "",
