--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "buildDev": "rm -rf dist && webpack --mode development --config webpack.server.config.js && webpack --mode development --config webpack.dev.config.js",
     "buildProd": "rm -rf dist && webpack --mode production --config webpack.server.config.js && webpack --mode production --config webpack.prod.config.js",
     "start": "node ./dist/server.js",
-    "watch": "watch 'npm run buildDev' ./src"
+    "watch": "watch -c 'npm run buildDev' ./src"
   },
   "keywords": [],
   "author": "",
@@ -16,13 +16,18 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.6",
-    "@nivo/bar": "^0.59.2",
-    "@nivo/geo": "^0.59.2",
-    "@nivo/pie": "^0.59.1",
+    "@naisutech/react-tree": "^0.4.2",
+    "@nivo/bar": "^0.67.0",
+    "@nivo/core": "^0.67.0",
+    "@nivo/geo": "^0.67.0",
+    "@nivo/pie": "^0.67.0",
+    "devextreme": "20.2.4",
+    "devextreme-react": "20.2.4",
     "express": "^4.17.1",
     "formik": "^1.5.8",
     "isbn-validate": "^1.0.3",
     "nivo": "^0.31.0",
+    "npm-watch": "^0.7.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-vis": "^1.11.7",
