--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "nivo": "^0.31.0",
     "npm-watch": "^0.7.0",
     "react": "^16.9.0",
+    "react-confirm-alert": "^2.8.0",
     "react-dom": "^16.9.0",
     "react-vis": "^1.11.7",
     "yup": "^0.27.0"
